--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name ="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" href="CSS/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet">
@@ -31,7 +32,56 @@
             <div class="about-me">
                 <p>My name is Lindsey Apolinar. I am a UX/UI designer ready to take on new and exciting challenges. My background in nursing helps me with a technical and empathetic approach to solving user problems. Teamwork, time management, and organization are some of my key strengths that I'm carrying into this chapter. Join me in turning the next page...</p>
             </div>
+            
         </section>
+        
+<!--Start homework 18 -->
+    <main> 
+        <hr><br></br>
+        <section class="skills-and-tools">
+            <div class="skills">
+                <h1>SKILLS</h1>
+                <ul>
+                    <li><span class="bold">Research:</span> Persona Creation, User Interviews, Affinity Diagrams, A/B Testing, Card Sorting</li>
+                    <br>
+                    <li><span class="bold">Design:</span> Wireframes, Storyboards, Accessibility, Information Architecture and Sitemapping, Prototyping and Mockups</li>
+                    <br>
+                    <li><span class="bold">Communication:</span> Collaboration, Empathy, Presentations</li>
+                </ul>
+            </div>
+            <div class="tools">
+                <h1>TOOLS</h1>
+                <ul>
+                    <li>Miro</li>
+                    <li>Figma</li>
+                    <li>Google Drive</li>
+                    <li>Trello</li>
+                    <li>GitHub</li>
+                </ul>
+            </div>
+        </section>
+        <div class="vl"></div>
+        <Section class="my-work">
+            <h1>CHECK OUT MY WORK</h1>
+            <div class="nonprofit">
+                <div> <img src="https://lh3.googleusercontent.com/TKq6cRshD0_Vtkn-na4Lo_eOElkrLFGwTJAE5EeX5JMC6XtZ_MewulFRkvrw8LKT934=w2400" alt="Mobile Prototype"></div> 
+                <div class="nonprofit-text">
+                    <h2>NON-PROFIT<br>REDESIGN</h2>
+                    <p>The National Alliance on Mental Illness (NAMI) website has an abundance of information and resources needing to be organized in a way that is quick and approachable to a variety of backgrounds of individuals. The new website allows users to find resources and additional information quickly to help them make their first steps in their mental health journey.</p>
+                    <button class="learn-more" type="button">Learn More</button>
+                </div>
+            </div>
+            <div class="government">
+                <div> <img src="https://lh4.googleusercontent.com/YruU7am-P62u3Awo5EBc2zVFVCnOfZSqXV7wKR-RDSZLcyqKF6fang1qUkGwjrXGcJI=w2400" alt="Mobile Prototype"></div>  <!--come back to for image input-->
+                <div class="government-text">
+                    <h2>GOVERNMENT<br>AGENCY REDESIGN</h2>
+                    <p>The Department of Energy website has copious amounts of information which makes it difficult for the user to find exactly what they are looking for. The website received a rejuvenation by recategorizing the navigation bar and making the homepage minimalistic to decrease the user’s feelings of being overwhelmed with information and in turn decrease bounce rates.</p>
+                    <button class="learn-more" type="button">Learn More</button>
+                </div>
+            </div>
+        </Section>
+    </main>
+<!--End homework 18 -->
 
         <footer>
             <div class="inline-block-footer-left">
